crates/core/src/ops/change/snapshots/mix_core__ops__change__tests__a_failed_activation_puts_both_files_back.snap
---
source: crates/core/src/ops/change/tests.rs
expression: "run.case(&before, &world)"
---
{
  "document": {
    "cancellation": "CANCELLATION_UNSPECIFIED",
    "changes": [
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "/home/mix-user/.local/state/mix/home.nix",
        "subject": "/home/mix-user/.local/state/mix/home.nix",
        "undone": true,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "/home/mix-user/.local/state/mix/state",
        "subject": "/home/mix-user/.local/state/mix/state",
        "undone": true,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_ACTIVATE_PROFILE",
        "status": "STATUS_FAILED",
        "step": "/home/mix-user profile",
        "subject": "mix-user's profile",
        "undone": false,
        "unknown": []
      }
    ],
    "command": "install",
    "dryRun": false,
    "exit": 0,
    "formatVersion": "1.0",
    "problems": [
      {
        "causes": [],
        "code": "CODE_COMMAND_FAILED",
        "command": {
          "command": "nix build",
          "exitStatus": 1,
          "outputTail": "error: attribute missing"
        },
        "detail": "nix build failed",
        "help": [
          "run the command again with `-v` to see the program's own output"
        ],
        "subject": "nix build",
        "title": "A program `mix` ran, such as `nix` or `git`, exited with an error",
        "type": "urn:mix:problem:command-failed"
      }
    ],
    "request": "request",
    "status": "STATUS_FAILED",
    "steps": [
      {
        "key": "mix-users",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "mix-users",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "mix-user",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "mix-user",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/.git",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix/.git",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/.git/config",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix/.git/config",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/.git history",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix/.git history",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/.gitignore",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix/.gitignore",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/flake.lock",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix/flake.lock",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/flake.nix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix/flake.nix",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/home.nix",
        "status": "STATUS_SUCCEEDED",
        "subject": "/home/mix-user/.local/state/mix/home.nix",
        "undone": true,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/state",
        "status": "STATUS_SUCCEEDED",
        "subject": "/home/mix-user/.local/state/mix/state",
        "undone": true,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/nix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/nix",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/nix/profiles",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/nix/profiles",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user profile",
        "status": "STATUS_FAILED",
        "subject": "doesnotexistinnixpkgs",
        "undone": false,
        "verb": "VERB_INSTALLING"
      }
    ],
    "waits": [],
    "warnings": []
  },
  "machine": {},
  "performed": [
    "PutFile /home/mix-user/.local/state/mix/home.nix",
    "PutFile /home/mix-user/.local/state/mix/state",
    "ActivateProfile mix-user's profile",
    "Restore /home/mix-user/.local/state/mix/state",
    "Restore /home/mix-user/.local/state/mix/home.nix"
  ]
}
