crates/core/src/ops/change/snapshots/mix_core__ops__change__tests__a_list_restored_from_the_profile_is_written_without_activating.snap
---
source: crates/core/src/ops/change/tests.rs
expression: "run.case(&before, &world)"
---
{
  "document": {
    "cancellation": "CANCELLATION_UNSPECIFIED",
    "changes": [
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "write-config",
        "subject": "/home/mix-user/.local/state/mix/state",
        "undone": false,
        "unknown": []
      }
    ],
    "command": "install",
    "dryRun": false,
    "exit": 0,
    "formatVersion": "1.0",
    "problems": [],
    "request": "request",
    "status": "STATUS_SUCCEEDED",
    "steps": [
      {
        "key": "write-config",
        "status": "STATUS_SUCCEEDED",
        "subject": "package list",
        "undone": false,
        "verb": "VERB_WRITING"
      }
    ],
    "waits": [],
    "warnings": []
  },
  "machine": {
    "files": {
      "/home/mix-user/.local/state/mix/state": {
        "contents": [
          "-{broken",
          "+{",
          "+  \"version\": 1,",
          "+  \"packages\": [",
          "+    \"git\"",
          "+  ]",
          "+}"
        ]
      }
    },
    "repositories": {
      "/home/mix-user/.local/state/mix/.git": {
        "after": {
          "records": {
            ".gitignore": "as on disk",
            "flake.lock": "as on disk",
            "flake.nix": "as on disk",
            "home.nix": "as on disk",
            "state": "as on disk"
          },
          "verifies": true
        },
        "before": {
          "records": {
            ".gitignore": "as on disk",
            "flake.lock": "as on disk",
            "flake.nix": "as on disk",
            "home.nix": "as on disk",
            "state": "older"
          },
          "verifies": true
        }
      }
    }
  },
  "performed": [
    "PutFile /home/mix-user/.local/state/mix/state",
    "Commit changes"
  ]
}
