crates/core/src/ops/change/snapshots/mix_core__ops__change__tests__an_install_over_a_broken_list_restores_it_and_adds_the_package.snap
---
source: crates/core/src/ops/change/tests.rs
expression: "run.case(&before, &world)"
---
{
  "document": {
    "cancellation": "CANCELLATION_UNSPECIFIED",
    "changes": [
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "/home/mix-user/.local/state/mix/home.nix",
        "subject": "/home/mix-user/.local/state/mix/home.nix",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "/home/mix-user/.local/state/mix/state",
        "subject": "/home/mix-user/.local/state/mix/state",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_ACTIVATE_PROFILE",
        "status": "STATUS_SUCCEEDED",
        "step": "/home/mix-user profile",
        "subject": "mix-user's profile",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_RECORD_STATE",
        "status": "STATUS_SUCCEEDED",
        "step": "record",
        "subject": "mix-user's package list",
        "undone": false,
        "unknown": []
      }
    ],
    "command": "install",
    "dryRun": false,
    "exit": 0,
    "formatVersion": "1.0",
    "problems": [],
    "request": "request",
    "status": "STATUS_SUCCEEDED",
    "steps": [
      {
        "key": "mix-users",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "mix-users",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "mix-user",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "mix-user",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/.git",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix/.git",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/.git/config",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix/.git/config",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/.git history",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix/.git history",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/.gitignore",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix/.gitignore",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/flake.lock",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix/flake.lock",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/flake.nix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/mix/flake.nix",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/home.nix",
        "status": "STATUS_SUCCEEDED",
        "subject": "/home/mix-user/.local/state/mix/home.nix",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/mix/state",
        "status": "STATUS_SUCCEEDED",
        "subject": "/home/mix-user/.local/state/mix/state",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/nix",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/nix",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user/.local/state/nix/profiles",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user/.local/state/nix/profiles",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "/home/mix-user profile",
        "status": "STATUS_SUCCEEDED",
        "subject": "ripgrep",
        "undone": false,
        "verb": "VERB_INSTALLING"
      },
      {
        "key": "/home/mix-user files in the way",
        "status": "STATUS_ALREADY_SATISFIED",
        "subject": "/home/mix-user files in the way",
        "undone": false,
        "verb": "VERB_CONFIGURING"
      },
      {
        "key": "record",
        "status": "STATUS_SUCCEEDED",
        "subject": "configuration",
        "undone": false,
        "verb": "VERB_RECORDING"
      }
    ],
    "waits": [],
    "warnings": []
  },
  "machine": {
    "files": {
      "/home/mix-user/.local/state/mix/home.nix": {
        "contents": [
          " # Code generated by mix. DO NOT EDIT.",
          " # Manual changes will be overwritten. Use `mix` commands to manage this configuration.",
          " ",
          " { pkgs, ... }: {",
          "   home = {",
          "     extraBuilderCommands = \"cp ${./state} $out/mix-state",
          " cp ${./flake.nix} $out/mix-flake.nix",
          " cp ${./flake.lock} $out/mix-flake.lock",
          " cp ${./home.nix} $out/mix-home.nix\";",
          "     homeDirectory = \"/home/mix-user\";",
          "     packages = [",
          "+      pkgs.fd",
          "       pkgs.git",
          "+      pkgs.ripgrep",
          "     ];",
          "     stateVersion = \"24.05\";",
          "     username = \"mix-user\";",
          "   };",
          " }"
        ]
      },
      "/home/mix-user/.local/state/mix/state": {
        "contents": [
          "-{broken",
          "+{",
          "+  \"version\": 1,",
          "+  \"packages\": [",
          "+    \"fd\",",
          "+    \"git\",",
          "+    \"ripgrep\"",
          "+  ]",
          "+}"
        ]
      }
    },
    "profiles": {
      "1000": {
        "after": {
          "active": 2,
          "dangling": [],
          "generations": [
            1,
            2
          ]
        },
        "before": {
          "active": 1,
          "dangling": [],
          "generations": [
            1
          ]
        }
      }
    },
    "repositories": {
      "/home/mix-user/.local/state/mix/.git": {
        "after": {
          "records": {
            ".gitignore": "as on disk",
            "flake.lock": "as on disk",
            "flake.nix": "as on disk",
            "home.nix": "as on disk",
            "state": "as on disk"
          },
          "verifies": true
        },
        "before": {
          "records": {
            ".gitignore": "as on disk",
            "flake.lock": "as on disk",
            "flake.nix": "as on disk",
            "home.nix": "as on disk",
            "state": "older"
          },
          "verifies": true
        }
      }
    }
  },
  "performed": [
    "PutFile /home/mix-user/.local/state/mix/home.nix",
    "PutFile /home/mix-user/.local/state/mix/state",
    "ActivateProfile mix-user's profile",
    "RecordState mix-user's package list",
    "Commit changes"
  ]
}
